; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_63.c_tcp_resolv.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_63.c_tcp_resolv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i64 }
%struct.in_addr = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"inet_aton: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @tcp_resolv(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.hostent*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call %struct.hostent* @gethostbyname(i8* %7)
  store %struct.hostent* %8, %struct.hostent** %4, align 8
  %9 = load %struct.hostent*, %struct.hostent** %4, align 8
  %10 = icmp eq %struct.hostent* %9, null
  br i1 %10, label %11, label %24

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = load i64, i64* %5, align 8
  %14 = inttoptr i64 %13 to %struct.in_addr*
  %15 = call i32 @inet_aton(i8* %12, %struct.in_addr* %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %11
  %19 = load i32, i32* @errno, align 4
  %20 = call i32 @strerror(i32 %19)
  %21 = call i32 @fatal(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %20)
  br label %22

22:                                               ; preds = %18, %11
  %23 = load i64, i64* %5, align 8
  store i64 %23, i64* %2, align 8
  br label %30

24:                                               ; preds = %1
  %25 = load %struct.hostent*, %struct.hostent** %4, align 8
  %26 = getelementptr inbounds %struct.hostent, %struct.hostent* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = inttoptr i64 %27 to i64*
  %29 = load i64, i64* %28, align 8
  store i64 %29, i64* %2, align 8
  br label %30

30:                                               ; preds = %24, %22
  %31 = load i64, i64* %2, align 8
  ret i64 %31
}

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @inet_aton(i8*, %struct.in_addr*) #1

declare dso_local i32 @fatal(i8*, i32) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
